Mon Aug 20 09:26:30 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:

          Coverity detected very unlikely fault fixed.

Thu Aug 16 12:32:58 UTC 2012  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/FTORB.mpc:
          This project needs threads.

Thu Aug 16 07:57:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Notify/lib/Options_Parser.cpp:

          Correct default value and range check -Priority option to correct
          original bad default value.

Wed Aug 15 15:13:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Miop/McastPreferredInterfaces/run_test.pl:

          Stop running the client for part two to shutdown server, if part
          one server has already exited.

Wed Aug 15 14:28:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Notify/lib/Options_Parser.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Consumer.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier_Client.cpp:

          Correct types, removes C++11 warning about {} initalization miss-match.

Wed Aug 15 10:08:20 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tao/IIOP_Connector.cpp:

          Correct types for time, removes C++11 warning.

Wed Aug 15 08:44:07 UTC 2012  Olli Savia  <ops@iki.fi>

        * docs/tutorials/Quoter/RTCORBA/StockQuoter.mpc:
          This project needs threads.

Tue Aug 14 11:08:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport_Recv_Packet.h:

          Move #pragma once below header that sets ACE_LACKS_PRAGMA_ONCE.

Tue Aug 14 11:00:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Miop/McastZIOP/client.cpp:

          Add .in() to var use to stop warning on lyxos.
